deploy/minimal-identity-setup.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aswarm
  labels:
    app.kubernetes.io/name: aswarm
